assets/scss/_core.scss
@use "variables";

:root {
	color-scheme: light;
	--color-bg: #ffffff;
	--color-text: #000000;
	--color-text-muted: #4a4a4a;
	--color-muted: #7c7c7c;
	--color-border: #000000;
	--color-surface: #fafafa;
	--color-surface-alt: #f6f6f6;
	--color-header-bg: #000000;
	--color-footer-bg: #000000;
	--color-on-header-text: #ffffff;
	--color-on-header-muted: #d0d0d0;
}

[data-theme="dark"] {
	color-scheme: dark;
	--color-bg: #000000;
	--color-text: #f2f2f2;
	--color-text-muted: #b3b3b3;
	--color-muted: #b0b0b0;
	--color-border: #b3b3b3;
	--color-surface: #0b0b0b;
	--color-surface-alt: #111111;
	--color-header-bg: #000000;
	--color-footer-bg: #000000;
	--color-on-header-text: #ffffff;
	--color-on-header-muted: #d0d0d0;
}

html {
	font-size: 62.5%;
}

body {
	background: variables.$color-white;
	color: variables.$color-black;
	font-family: variables.$font-poppins;
	//font-size: 1.8em;
	font-size: 1.5em;
	line-height: 1.1;
	font-weight: 400;
	-webkit-font-smoothing: antialiased;
}

h1,
.h1 {
	color: variables.$color-black;
	font-size: 2.7rem;
	font-weight: 400;
	line-height: 1;
	margin: 0;
	text-align: left;
}

h2,
.h2 {	
	color: variables.$color-silver-chalice;
	display: block;
	text-align: left; // use to be left
	font-family: variables.$font-lekton;
    font-size: 1rem;
    font-weight: 400;
    letter-spacing: .2rem;
    line-height: 1;
	margin: 0 0 2rem;
    text-transform: uppercase;
}

h3,
.h3 {
	color: variables.$color-black;
	font-family: variables.$font-poppins;
	font-size: 1.8rem;
	font-weight: 400;
	line-height: 1.3;
	// padding-top:0.5px;
	margin: 0;
}

p {
	margin: 0;
	padding-bottom: 0.5rem;
}

a {
	color: variables.$color-black;
	text-decoration: none;
}

ul {
	margin: 0;
	padding: 0;
	list-style-type: none;	
}

img {
	display: block;
	max-width: 100%;

}

hr {
	background: variables.$color-silver-chalice;
	border: 0;
	display: block;
	height: 1px;
	margin: 3rem 0;

	@media (min-width: variables.$breakpoint-medium) {
		margin: 4.5rem 0;
	}
}

abbr[title] {
	border-bottom: 1px dotted variables.$color-border;
	text-decoration: none;
}

code {
	background: variables.$color-white;
	border: 1px solid variables.$color-silver-chalice;
	border-radius: 3px;
	font-family: variables.$font-lekton;
	font-size: 1.5rem;	
	padding: .1rem .4rem;

	var {
		font-style: italic;
	}
}

dl {
	margin: 0 0 3rem;

	dt,
	dd {
		font-family: variables.$font-lekton;		
	}

	dt {
		font-weight: 600;
	}

	dd {
		font-weight: 400;
	}
}

.responsive-table {
	margin-bottom: 3rem;
	
	@media (max-width: variables.$breakpoint-xsmall) {
		display: block;	
		overflow-x: scroll;
		max-width: variables.$breakpoint-xsmall;

		th,
		td {
			min-width: 10rem;
		}
	}
}

table {
	border-collapse: collapse;	
	width: 100%;

	thead {
		td,
		th {
			font-weight: 600;
		}
	}

	tbody > tr:nth-child(odd) > td, 
	tbody > tr:nth-child(odd) > th {
		background: variables.$color-white-sand;
	}

	th,
	td {
		font-family: variables.$font-lekton;
		font-weight: 400;
		text-align: left;
		padding: .5rem 1rem;
	}
}

blockquote {
	border-left: .6rem solid variables.$color-border;
	padding-left: 2rem;
	margin: 0 0 3rem;

	p {
		font-style: italic;
	}

	@media (min-width: variables.$breakpoint-medium) {
		padding-left: 3rem;
	}
}

pre {
	margin: 0 0 3rem;
}

